--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>oficina de tecnologia para jovens</title>
 </head>
 <body>
-    
+    <h1>Oficina de Tecnologia para Jovens</h1>
+
+    <a href="sobre.html">Página sobre</a>
+    <a href="atv.html">Atividades</a>
+
 </body>
 </html>
