--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Oficina de Tecnologia para Jovens</h1>
 
-    <a href="sobre.html">Página sobre</a>
-    <a href="atv.html">Atividades</a>
+    <a href="sobre.html">Página sobre</a><br>
+    <a href="atv.html">Atividades</a><br>
 
 </body>
 </html>
