--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <a href="sobre.html">Página sobre</a><br>
     <a href="atv.html">Atividades</a><br>
-
+    <a href="equipe.html">Equipe Organizadora</a><br>
+    <a href="depoimentos.html">Depoimentos</a><br>
+    <a href="contato.html">Contatos</a>
 </body>
 </html>
